--- a/src/app/opponent-overview/opponent-overview.component.html
+++ b/src/app/opponent-overview/opponent-overview.component.html
@@ -1,72 +1,29 @@
 <div class="flex m-2 space-x-2">
-  <div class="w-fit bg-cyan-100 p-1 border-2 border-cyan-200 rounded-xl">
+  <div class="w-[7.5%] bg-cyan-100 p-1 border-2 border-cyan-200 rounded-xl">
     <a routerLink="/drafts" class="bg-cyan-300 rounded-full px-2 shadow hover:shadow shadow-cyan-600">Back</a>
     <div class="h-auto bg-cyan-300 p-2 m-2 rounded-xl shadow-md shadow-cyan-600">
-      <sprite *ngFor="let pokemon of draft.team" [pokemonId]="pokemon.pid" [flipped]="true"></sprite>
+      <sprite class="flex justify-center" *ngFor="let pokemon of draft.team" [pokemonId]="pokemon.pid" [flipped]="true">
+      </sprite>
     </div>
   </div>
-  <div class="bg-red-100 rounded-xl p-2 border-2 border-red-200">
-    <div *ngIf="!formVisible">
+  <div class="bg-red-100 w-[92.5%] rounded-xl p-2 border-2 border-red-200">
+    <div>
       <p class="bold text-3xl m-2">{{draft.leagueName}}</p>
-      <div id="teams" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 grid-flow-row overflow-auto h-auto">
-        <opponent-team-preview *ngFor="let opp of draft.opponents.reverse(); let i = index" [team]="opp"
-          [index]="draft.opponents.length-i-1"></opponent-team-preview>
-      </div>
-      <button (click)="formVisible=true"
-        class="bg-red-300 rounded-full p-2 m-3 shadow-md hover:shadow shadow-red-600">Add
-        Team</button>
-    </div>
-    <div *ngIf="formVisible">
-      <button (click)="formVisible=false"
-        class="bg-red-300 rounded-full p-2 m-3 shadow-md hover:shadow shadow-red-600">Cancel</button>`
-      <p class="bold text-3xl">New Draft</p>
-      <form [formGroup]="draftForm"
-        class="team bg-red-300 shadow-md hover:shadow-md shadow-red-600 m-2 p-2 rounded-xl space-y-3">
-        <div class="w-full">
-          <div class="flex space-x-3">
-            <div class="w-1/3">
-              <label class="p-1">Opponent Name</label>
-              <input formControlName="opponentName"
-                class="text-medium w-full bg-red-200 rounded-full shadow-inner shadow-red-600 p-1 mx-1 text-center">
-            </div>
-            <div class="w-1/3">
-              <label class="p-1">Stage</label>
-              <input formControlName="stage"
-                class="text-medium w-full bg-red-200 rounded-full shadow-inner shadow-red-600 p-1 mx-1 text-center">
-            </div>
-          </div>
-          <div *ngFor="let pokemon of draftForm.value.team" class="flex space-x-3">
-            <sprite [pokemonId]="pokemon!.pokemonName"></sprite>
-            <div>{{pokemon!.shiny}}</div>
-            <div>{{pokemon!.captain}}</div>
-          </div>
+      <div *ngIf="!formVisible">
+        <button (click)="formVisible=true"
+          class="bg-red-300 rounded-full p-2 m-3 shadow-md hover:shadow shadow-red-600">Add
+          Team</button>
+        <div id="teams" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 grid-flow-row overflow-auto h-auto">
+          <opponent-team-preview *ngFor="let opp of draft.opponents.reverse(); let i = index" [team]="opp"
+            [index]="draft.opponents.length-i-1"></opponent-team-preview>
         </div>
-        <form [formGroup]="pokemonForm" class="border-2 border-red-200 rounded-xl w-full flex">
-          <div class="w-1/2 ">
-            <div class="p-1">Name</div>
-            <input formControlName="pokemonName"
-              class="text-medium w-full bg-red-200 rounded-full shadow-inner shadow-red-600 p-1 mx-1 text-center">
-            <div *ngIf="pokemonForm.get('pokemonName')?.touched && pokemonForm.get('pokemonName')?.invalid">Invalid name
-            </div>
-          </div>
-          <div class="w-1/6">
-            <div class="p-1">Shiny</div>
-            <input type="checkbox" formControlName="shiny"
-              class="text-medium bg-red-200 rounded-full shadow-inner shadow-red-600 p-1 mx-1 text-center">
-
-          </div>
-          <div class="w-1/6">
-            <div class="p-1">Captain</div>
-            <input type="checkbox" formControlName="captain"
-              class="text-medium bg-red-200 rounded-full shadow-inner shadow-red-600 p-1 mx-1 text-center">
-          </div>
-          <button (click)="addNewPokemon()"
-            class="w-1/6 bg-red-300 rounded-full px-1 my-3 shadow hover:shadow shadow-red-600">Add</button>
-        </form>
-        <button (click)="onSubmit()"
-          class="w-1/6 bg-red-300 rounded-full px-1 my-3 shadow hover:shadow shadow-red-600">Submit</button>
-      </form>
-      {{draftForm.value | json}}<br>
-      {{pokemonForm.value | json}}
+      </div>
+      <div *ngIf="formVisible">
+        <button (click)="formVisible=false"
+          class="bg-red-300 rounded-full p-2 m-3 shadow-md hover:shadow shadow-red-600">Cancel</button>
+        <opponent-form [teamId]="teamId"></opponent-form>
+      </div>
     </div>
   </div>
+
+</div>
