break out form from opponent

--- a/src/app/opponent-overview/team-preview/opponent-team-preview.component.html
+++ b/src/app/opponent-overview/team-preview/opponent-team-preview.component.html
@@ -13,12 +13,12 @@
         </div>
     </div>
     <div class="flex">
-        <div class="w-1/4 text-center bg-red-300 shadow-md hover:shadow-md shadow-red-600 rounded-xl m-2">Score</div>
-        <div class="w-1/2 text-center bg-red-300 shadow-md hover:shadow-md shadow-red-600 rounded-xl m-2"
+        <div class="w-1/4 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl m-2">Score</div>
+        <div class="w-1/2 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl m-2"
             [routerLink]="index.toString()">Prep</div>
-        <div class="w-1/8 text-center bg-red-300 shadow-md hover:shadow-md shadow-red-600 rounded-xl m-2">Edit
+        <div class="w-1/8 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl m-2">Edit
         </div>
-        <div class="w-1/8 text-center bg-red-300 shadow-md hover:shadow-md shadow-red-600 rounded-xl m-2">Delete
+        <div class="w-1/8 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl m-2">Archive
         </div>
     </div>
 </div>
