--- a/src/app/opponent-overview/team-preview/opponent-team-preview.component.html
+++ b/src/app/opponent-overview/team-preview/opponent-team-preview.component.html
@@ -13,12 +13,12 @@
         </div>
     </div>
     <div class="flex">
-        <div class="w-1/4 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl m-2">Score</div>
-        <div class="w-1/2 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl m-2"
-            [routerLink]="index.toString()">Prep</div>
-        <div class="w-1/8 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl m-2">Edit
-        </div>
-        <div class="w-1/8 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl m-2">Archive
-        </div>
+        <a class="w-1/4 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl m-2">Score</a>
+        <a class="w-1/2 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl m-2"
+            [routerLink]="index.toString()">Prep</a>
+        <a class="w-1/8 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl m-2">Edit
+        </a>
+        <a class="w-1/8 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl m-2">Archive
+        </a>
     </div>
 </div>
