--- a/src/app/opponent-overview/opponent-overview.component.html
+++ b/src/app/opponent-overview/opponent-overview.component.html
@@ -1,6 +1,6 @@
 <div class="flex m-2 space-x-2">
   <div class="w-[7.5%] bg-cyan-100 p-1 border-2 border-cyan-200 rounded-xl">
-    <a routerLink="/drafts" class="bg-cyan-300 rounded-full px-2 shadow hover:shadow shadow-cyan-600">Back</a>
+    <a routerLink="/draft" class="bg-cyan-300 rounded-full px-2 shadow hover:shadow shadow-cyan-600">Back</a>
     <div class="h-auto bg-cyan-300 p-2 m-2 rounded-xl shadow-md shadow-cyan-600">
       <sprite class="flex justify-center" *ngFor="let pokemon of draft.team" [pokemonId]="pokemon.pid" [flipped]="true">
       </sprite>
@@ -14,8 +14,8 @@
           class="bg-red-300 rounded-full p-2 m-3 shadow-md hover:shadow shadow-red-600">Add
           Team</button>
         <div id="teams" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 grid-flow-row overflow-auto h-auto">
-          <opponent-team-preview *ngFor="let opp of draft.opponents.reverse(); let i = index" [team]="opp"
-            [index]="draft.opponents.length-i-1"></opponent-team-preview>
+          <opponent-team-preview *ngFor="let matchup of matchups.reverse(); let i = index" [matchup]="matchup"
+            [index]="matchups.length-i-1"></opponent-team-preview>
         </div>
       </div>
       <div *ngIf="formVisible">
