--- a/src/app/opponent-overview/team-preview/opponent-team-preview.component.html
+++ b/src/app/opponent-overview/team-preview/opponent-team-preview.component.html
@@ -2,20 +2,20 @@
     <div class="bg-red-300 shadow-md p-2 rounded-xl">
         <div class="w-full flex">
             <div class="text-medium bg-red-200 w-3/5 rounded-full shadow-inner shadow-red-600 p-1 mx-1 text-center">
-                {{ team.opponentName }}</div>
+                {{ matchup.bTeam.teamName }}</div>
             <div class="w-1/5 h-fit text-xs bg-red-200 rounded-full shadow-inner shadow-red-600 p-1 text-center">
-                {{ score(team.score) }}</div>
+                {{ score(matchup.score) }}</div>
             <div class="w-1/5 h-fit text-xs bg-red-200 rounded-full shadow-inner shadow-red-600 p-1 mx-1 text-center">
-                {{ team.stage }}</div>
+                {{ matchup.stage }}</div>
         </div>
         <div class="sprites grid grid-cols-6 px-4 pt-2">
-            <sprite *ngFor="let pokemon of team.team" [pokemonId]="pokemon.pid"></sprite>
+            <sprite *ngFor="let pokemon of matchup.bTeam.team" [pokemonId]="pokemon.pid"></sprite>
         </div>
     </div>
     <div class="flex">
         <a class="w-1/4 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl m-2">Score</a>
         <a class="w-1/2 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl m-2"
-            [routerLink]="index.toString()">Prep</a>
+            [routerLink]="'/draft/matchup/'+matchup._id">Prep</a>
         <a class="w-1/8 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl m-2">Edit
         </a>
         <a class="w-1/8 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl m-2">Archive
