matchup visual adjustments

--- a/src/app/matchup/coveragechart/coveragechart.component.html
+++ b/src/app/matchup/coveragechart/coveragechart.component.html
@@ -1,4 +1,4 @@
-<div class="m-4 w-fit">
+<div class="w-fit">
     <button (click)="swapTeams()" class="border-t-4 border-x-4 border-slate-400 rounded-t-xl px-3 text-sm border-b"
         [ngClass]="teamColor(true)">Swap</button>
     <div class="grid grid-cols-1 md:grid-cols-2 grid-rows-flex border-4 bg-slate-400 gap-1 border-slate-400">
