--- a/src/app/matchup/matchup.component.html
+++ b/src/app/matchup/matchup.component.html
@@ -11,12 +11,12 @@
             </sprite>
         </div>
     </div> -->
-    <div class="flex flex-wrap text-xs">
-        <overview class="z-10" [matchupId]="this.matchup_id"></overview>
-        <summery class="z-10" [matchupId]="this.matchup_id"></summery>
-        <typechart class="z-10" [matchupId]="this.matchup_id"></typechart>
-        <speedchart class="z-10" [matchupId]="this.matchup_id"></speedchart>
-        <movechart class="z-10" [matchupId]="this.matchup_id"></movechart>
-        <coveragechart class="z-10" [matchupId]="this.matchup_id"></coveragechart>
+    <div class="flex flex-wrap text-xs p-2">
+        <overview class="z-10 m-2" [matchupId]="this.matchup_id"></overview>
+        <summery class="z-10 m-2" [matchupId]="this.matchup_id"></summery>
+        <typechart class="z-10 m-2" [matchupId]="this.matchup_id"></typechart>
+        <speedchart class="z-10 m-2" [matchupId]="this.matchup_id"></speedchart>
+        <movechart class="z-10 m-2" [matchupId]="this.matchup_id"></movechart>
+        <coveragechart class="z-10 m-2" [matchupId]="this.matchup_id"></coveragechart>
     </div>
 </div>
