--- a/src/app/matchup/overview/overview.component.html
+++ b/src/app/matchup/overview/overview.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-wrap items-center overflow-y-auto">
-    <div class="flex flex-row w-256 md:w-128 m-4">
+    <div class="flex flex-row w-256 md:w-128">
         <div class="m-1 w-1/2">
             <div class="bg-slate-400 text-center text-xl text-medium rounded-t-3xl">My Team</div>
             <table id="myOverview" class="table-auto w-full border-4 border-slate-400 rounded-md">
