--- a/src/app/matchup/summery/summery.component.html
+++ b/src/app/matchup/summery/summery.component.html
@@ -1,4 +1,4 @@
-<div class="m-1">
+<div class="">
     <button (click)="swapTeams()" class="border-t-4 border-x-4 border-slate-400 rounded-t-xl px-2 border-b"
         [ngClass]="teamColor(true)">⇄</button>
     <table id="myOverview" class="table-auto w-full border-4 border-slate-400 rounded-md" [ngClass]="teamColor()">
