--- a/src/app/matchup/movechart/movechart.component.html
+++ b/src/app/matchup/movechart/movechart.component.html
@@ -1,9 +1,9 @@
-<div class="m-4">
+<div class="">
     <button (click)="swapTeams()" class="border-t-4 border-x-4 border-slate-400 rounded-t-xl px-2 border-b"
         [ngClass]="teamColor(true)">⇄</button>
-    <div class="max-h-128 overflow-auto w-128 border-8 border-slate-400 bg-slate-400">
+    <div class="max-h-128 overflow-auto w-128 border-4 border-slate-400 bg-slate-400">
         <div *ngFor="let category of this.teams[selectedTeam]">
-            <div class="bg-slate-300 sticky top-0 left-0 text-lg border-b-2 border-slate-400">
+            <div class="bg-slate-300 sticky top-0 left-0 text-lg border-b-2 border-slate-400 text-center font-bold">
                 {{category.catName}}
             </div>
             <div class="">
