--- a/src/app/opponent-overview/opponent-form/opponent-form.component.html
+++ b/src/app/opponent-overview/opponent-form/opponent-form.component.html
@@ -4,8 +4,8 @@
   <div class="w-full">
     <div class="flex space-x-3">
       <div class="w-1/3">
-        <label class="p-1">Opponent Name</label>
-        <input formControlName="opponentName"
+        <label class="p-1">Team Name</label>
+        <input formControlName="teamName"
           class="text-medium w-full bg-red-200 rounded-full shadow-inner shadow-red-600 p-1 mx-1 text-center">
       </div>
       <div class="w-1/3">
