--- a/src/app/opponent-overview/team-preview/opponent-team-preview.component.html
+++ b/src/app/opponent-overview/team-preview/opponent-team-preview.component.html
@@ -18,7 +18,7 @@
             [routerLink]="'/draft/matchup/'+matchup._id">Prep</a>
         <a class="w-1/8 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl m-2">Edit
         </a>
-        <a class="w-1/8 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl m-2">Archive
+        <a class="w-1/8 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl m-2">Delete
         </a>
     </div>
 </div>
