--- a/src/app/opponent-overview/opponent-form/opponent-form.component.html
+++ b/src/app/opponent-overview/opponent-form/opponent-form.component.html
@@ -1,5 +1,5 @@
 <p class="bold text-3xl">New Draft</p>
-<form [formGroup]="draftForm"
+<form [formGroup]="draftForm" (ngSubmit)="onSubmit()"
   class="team bg-red-300 shadow-md hover:shadow-md shadow-red-600 m-2 p-2 rounded-xl space-y-3">
   <div class="w-full">
     <div class="flex space-x-3">
@@ -14,36 +14,18 @@
           class="text-medium w-full bg-red-200 rounded-full shadow-inner shadow-red-600 p-1 mx-1 text-center">
       </div>
     </div>
-    <div *ngFor="let pokemon of draftForm.value.team" class="flex space-x-3">
-      <sprite [pokemonId]="pokemon!.pokemonName"></sprite>
-      <div>{{pokemon!.shiny}}</div>
-      <div>{{pokemon!.captain}}</div>
-    </div>
   </div>
-  <form [formGroup]="pokemonForm" class="border-2 border-red-200 rounded-xl w-full flex">
-    <div class="w-1/2 ">
-      <div class="p-1">Name</div>
-      <input formControlName="pokemonName"
-        class="text-medium w-full bg-red-200 rounded-full shadow-inner shadow-red-600 p-1 mx-1 text-center">
-      <div *ngIf="pokemonForm.get('pokemonName')?.touched && pokemonForm.get('pokemonName')?.invalid">Invalid name
-      </div>
-    </div>
-    <div class="w-1/6">
-      <div class="p-1">Shiny</div>
-      <input type="checkbox" formControlName="shiny"
-        class="text-medium bg-red-200 rounded-full shadow-inner shadow-red-600 p-1 mx-1 text-center">
-
-    </div>
-    <div class="w-1/6">
-      <div class="p-1">Captain</div>
-      <input type="checkbox" formControlName="captain"
-        class="text-medium bg-red-200 rounded-full shadow-inner shadow-red-600 p-1 mx-1 text-center">
-    </div>
+  <div class="border-2 border-rose-200 rounded-xl p-2">
+    <ul>
+      <ol *ngFor="let pokemonForm of teamArray.controls; let i = index">
+        <pokemon-form [pokemonForm]="$any(pokemonForm)" [formIndex]="i" (deletePokemonEvent)="deletePokemon($event)"
+          (addPokemonEvent)="addNewPokemon(i, $event)"></pokemon-form>
+      </ol>
+    </ul>
     <button (click)="addNewPokemon()"
-      class="w-1/6 bg-red-300 rounded-full px-1 my-3 shadow hover:shadow shadow-red-600">Add</button>
-  </form>
-  <button (click)="onSubmit()"
+      class="bg-red-300 rounded-full px-1 my-3 shadow hover:shadow shadow-red-600">Add</button>
+  </div>
+  <button type="submit"
     class="w-1/6 bg-red-300 rounded-full px-1 my-3 shadow hover:shadow shadow-red-600">Submit</button>
 </form>
 {{draftForm.value | json}}<br>
-{{pokemonForm.value | json}}
