rename and reorganize

--- a/src/app/draft-overview/draft-overview.component.html
+++ b/src/app/draft-overview/draft-overview.component.html
@@ -2,7 +2,7 @@
   <div *ngIf="!formVisible">
     <p class="bold text-3xl" *ngIf="teams">Drafts</p>
     <div id="teams" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 grid-flow-row overflow-auto h-auto">
-      <team-preview [routerLink]="[team.leagueId]" *ngFor="let team of teams.reverse()" [team]="team"></team-preview>
+      <draft-preview [routerLink]="[team.leagueId]" *ngFor="let team of teams.reverse()" [team]="team"></draft-preview>
     </div>
     <button (click)="formVisible=true"
       class="bg-cyan-300 rounded-full p-2 m-3 shadow-md hover:shadow shadow-cyan-600">Add
