--- a/src/app/matchup/overview/overview.component.html
+++ b/src/app/matchup/overview/overview.component.html
@@ -11,11 +11,13 @@
                 </tr>
                 <tr *ngFor="let pokemon of aTeam.team" class="h-12 bg-cyan-300 border-b border-slate-400">
                     <td class="w-8 -mr-2">
-                        <div>
-                            <img src="../../../assets/icons/tera.svg">
-                        </div>
-                        <div>
-                            <img src="../../../assets/icons/z.svg">
+                        <div *ngIf="pokemon.captain">
+                            <div>
+                                <img src="../../../assets/icons/tera.svg">
+                            </div>
+                            <div>
+                                <img src="../../../assets/icons/z.svg">
+                            </div>
                         </div>
                     </td>
                     <td class="w-12">
@@ -42,11 +44,13 @@
                         <sprite [pokemonId]="pokemon.pid"></sprite>
                     </td>
                     <td class="w-8 -ml-2">
-                        <div>
-                            <img src="../../../assets/icons/tera.svg">
-                        </div>
-                        <div>
-                            <img src="../../../assets/icons/z.svg">
+                        <div *ngIf="pokemon.captain">
+                            <div>
+                                <img src="../../../assets/icons/tera.svg">
+                            </div>
+                            <div>
+                                <img src="../../../assets/icons/z.svg">
+                            </div>
                         </div>
                     </td>
                 </tr>
