--- a/src/app/draft-overview/draft-preview/draft-preview.component.html
+++ b/src/app/draft-overview/draft-preview/draft-preview.component.html
@@ -1,16 +1,33 @@
-<a [routerLink]="[team.leagueId]">
-  <div class="bg-cyan-300 shadow-md hover:shadow-md shadow-cyan-600 m-2 p-2 rounded-xl">
+<div class="bg-cyan-200 shadow-md shadow-cyan-600 m-2 rounded-xl">
+  <div class="bg-cyan-300 shadow-md p-2 rounded-xl">
     <div class="w-full flex">
-      <div class="text-medium bg-cyan-200 w-1/3 rounded-full shadow-inner shadow-cyan-600 p-1 mx-1 text-center">
+      <div class="text-medium bg-cyan-200 w-3/5 rounded-full shadow-inner shadow-cyan-600 p-1 mx-1 text-center">
         {{ team.leagueName }}</div>
-      <div class="w-1/6"></div>
-      <div class="w-1/4 h-fit text-xs bg-cyan-200 rounded-full shadow-inner shadow-cyan-600 p-1 text-center">
+      <div class="w-1/5 h-fit text-xs bg-cyan-200 rounded-full shadow-inner shadow-cyan-600 p-1 text-center">
         {{ team.ruleset }}</div>
-      <div class="w-1/4 h-fit text-xs bg-cyan-200 rounded-full shadow-inner shadow-cyan-600 p-1 mx-1 text-center">
+      <div class="w-1/5 h-fit text-xs bg-cyan-200 rounded-full shadow-inner shadow-cyan-600 p-1 mx-1 text-center">
         {{ team.format }}</div>
     </div>
     <div class="sprites grid grid-cols-6 px-4 pt-2">
-      <sprite *ngFor="let pokemon of team.team " [pokemonId]="pokemon.pid"></sprite>
+      <sprite *ngFor="let pokemon of team.team" [pokemonId]="pokemon.pid"></sprite>
     </div>
   </div>
-</a>
+  <div class="flex" *ngIf="!archiveConfirm">
+    <a class="w-1/4 text-center bg-cyan-300 shadow hover:shadow shadow-cyan-600 rounded-xl m-2 text-cyan-500">Stats</a>
+    <a class="w-1/2 text-center bg-cyan-300 shadow hover:shadow shadow-cyan-600 rounded-xl m-2"
+      [routerLink]="'/draft/'+team.leagueId">Matches</a>
+    <a class="w-1/8 text-center bg-cyan-300 shadow hover:shadow shadow-cyan-600 rounded-xl m-2 text-cyan-500">Edit
+    </a>
+    <a class="w-1/8 text-center bg-cyan-300 shadow hover:shadow shadow-cyan-600 rounded-xl m-2 text-cyan-500"
+      (click)="archiveConfirm=true">Archive
+    </a>
+  </div>
+  <div class="flex" *ngIf="archiveConfirm">
+    <div class="w-1/2 text-center bg-cyan-300 shadow hover:shadow shadow-cyan-600 rounded-xl m-2">Are you sure you
+      want to archive?</div>
+    <div class="w-1/4 text-center bg-cyan-300 shadow hover:shadow shadow-cyan-600 rounded-xl m-2">Yes</div>
+    <div class="w-1/4 text-center bg-cyan-300 shadow hover:shadow shadow-cyan-600 rounded-xl m-2"
+      (click)="archiveConfirm=false">No
+    </div>
+  </div>
+</div>
