--- a/src/app/opponent-overview/opponent-form/opponent-form.component.html
+++ b/src/app/opponent-overview/opponent-form/opponent-form.component.html
@@ -1,5 +1,5 @@
 <p class="bold text-3xl">New Draft</p>
-<form [formGroup]="draftForm" (ngSubmit)="onSubmit()"
+<form [formGroup]="matchupForm" (ngSubmit)="onSubmit()"
   class="team bg-red-300 shadow-md hover:shadow-md shadow-red-600 m-2 p-2 rounded-xl space-y-3">
   <div class="w-full">
     <div class="flex space-x-3">
@@ -28,4 +28,4 @@
   <button type="submit"
     class="w-1/6 bg-red-300 rounded-full px-1 my-3 shadow hover:shadow shadow-red-600">Submit</button>
 </form>
-{{draftForm.value | json}}<br>
+{{matchupForm.value | json}}<br>
