--- a/src/app/opponent-overview/opponent-preview/opponent-preview.component.html
+++ b/src/app/opponent-overview/opponent-preview/opponent-preview.component.html
@@ -13,13 +13,13 @@
         </div>
     </div>
     <div class="flex" *ngIf="!deleteConfirm">
-        <a class="w-1/4 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl m-2">Score</a>
+        <a class="w-1/4 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl m-2 text-red-400">Score</a>
         <a class="w-1/2 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl m-2"
             [routerLink]="'/draft/matchup/'+matchup._id">Prep</a>
-        <a class="w-1/8 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl m-2">Edit
+        <a class="w-1/8 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl m-2 text-red-400">Edit
         </a>
         <a class="w-1/8 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl m-2"
-            (click)="toggleDeleteConfirm(true)">Delete
+            (click)="deleteConfirm=true">Delete
         </a>
     </div>
     <div class="flex" *ngIf="deleteConfirm">
@@ -28,7 +28,7 @@
         <div class="w-1/4 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl m-2"
             (click)="deleteMatchup(matchup._id)">Yes</div>
         <div class="w-1/4 text-center bg-red-300 shadow hover:shadow shadow-red-600 rounded-xl m-2"
-            (click)="toggleDeleteConfirm(false)">No
+            (click)="deleteConfirm=false">No
         </div>
     </div>
 </div>
