basic error page

--- a/src/app/matchup/overview/overview.component.html
+++ b/src/app/matchup/overview/overview.component.html
@@ -43,8 +43,8 @@
                     <td class="w-12">
                         <sprite [pokemonId]="pokemon.pid"></sprite>
                     </td>
-                    <td class="w-8 -ml-2">
-                        <div *ngIf="pokemon.captain">
+                    <td>
+                        <div class="w-8 -ml-2" *ngIf="pokemon.captain">
                             <div>
                                 <img src="../../../assets/icons/tera.svg">
                             </div>
